--- a/install
+++ b/install
@@ -2,7 +2,7 @@
 set -e
 
 usage() {
-  echo "Использование: $0 [-b build и запуск] [-s stop] [-r restart] [-d delete]"
+  echo "usage: $0 [-b build & start] [-s stop] [-r restart] [-d delete]"
   exit 1
 }
 
@@ -12,21 +12,16 @@ fi
 
 case "$1" in
   -b)
-    echo "Собираем Docker-образ и запускаем контейнер..."
     docker-compose build --no-cache
     docker-compose up -d
-    echo "Готово! Контейнер запущен."
     ;;
   -s)
-    echo "Останавливаем контейнер..."
     docker-compose stop
     ;;
   -r)
-    echo "Перезапускаем контейнер..."
     docker-compose restart
     ;;
   -d)
-    echo "Удаляем контейнеры и образы..."
     docker-compose down --rmi all
     ;;
   *)
