--- a/install
+++ b/install
@@ -12,6 +12,7 @@ fi
 
 case "$1" in
   -b)
+    docker compose down -v --remove-orphans
     docker compose build --no-cache
     docker compose up -d
     ;;
